Update Paper-Server.ps1